<resources>
    <string name="app_name" translatable="false">Week11</string>
    <string name="Close" translatable="false">Close</string>
    <string name="Open" translatable="false">Open</string>
    <string name="random_string" translatable="false">Lorem ipsum dolor sit amet, consectetuer adipiscin</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="your_text" translatable="false">Your text</string>
    <string name="hello" translatable="false">Hello </string>
    <string name="set_width" translatable="false">Set width</string>
    <string name="set_height" translatable="false">Set height</string>
    <string name="pick_a_color" translatable="false">Pick a color</string>
    <string name="set_font_size" translatable="false">Set font size</string>
    <string name="lock_your_text" translatable="false">Lock your text</string>
    <string name="your_name" translatable="false">Your name:</string>
    <string name="select_language" translatable="false">Select language</string>

    <string-array name="color_array">
        <item>Current</item>
        <item>Black</item>
        <item>White</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Red</item>
        <item>Blue</item>
    </string-array>

    <string-array name="fontsize_array">
        <item>Current</item>
        <item>12</item>
        <item>18</item>
        <item>24</item>
        <item>30</item>
        <item>36</item>
        <item>42</item>
        <item>48</item>
        <item>54</item>
    </string-array>

    <string-array name="language_array">
        <item>Current</item>
        <item>Finnish</item>
        <item>English</item>

    </string-array>
</resources>
